# CastPlan_mcp

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INSTALLATION.md  LICENSE  README.md  SECURITY.md  build.config.js  castplan-automation-mcp-2.1.0.tgz  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: create-release.yml  manual-publish.yml  npm-publish.yml  release.yml
python-bridge/: README.md  pyproject.toml
python-bridge/src/castplan_automation/: __init__.py  cli.py  config.py  installer.py  launcher.py
scripts/: analyze-bundle.js  build-configs.js  comprehensive-test-runner.js  install-alternatives.js  multi-manager-packager.js  production-build.js  test-i18n.mjs  test-runner.js
src/: cli.ts  index.ts
src/__tests__/: AIAnalysisService.test.ts  BMADService.test.ts  CastPlanUltimateAutomationServer.test.ts  DateTimeService.test.ts  DocumentLifecycleService.test.ts  DocumentTreeService.test.ts  DocumentationService.test.ts  FileBasedWorkDocumentConnectionService.test.ts  HooksService.real-logic.test.ts  HooksService.test.ts  WorkDocumentConnectionService.test.ts  setup.ts
src/__tests__/comprehensive/: ErrorScenarioTestSuite.test.ts
src/__tests__/e2e/: WorkflowTests.test.ts
src/__tests__/helpers/: ContractTestFramework.ts  DatabaseIntegrationTestFramework.ts  I18nTestUtils.ts  MockFactories.ts  TestReportingFramework.ts  TestUtils.ts
src/__tests__/integration/: ContractTests.test.ts  DatabaseIntegrationTests.test.ts  ErrorRecoveryTests.test.ts  I18nIntegrationTests.test.ts  PerformanceTests.test.ts  ServiceIntegrationChainTests.test.ts
src/__tests__/performance/: AdvancedPerformanceFramework.ts  ComprehensivePerformanceTests.test.ts  DatabasePerformanceProfiler.ts  LoadTestScenarios.ts  MemoryProfiler.ts
src/__tests__/tools/: BMADTools.test.ts  DocumentationTools.test.ts  EnhancedTools.test.ts  HooksTools.test.ts
src/__tests__/utils/: ErrorRecoveryManager.test.ts
src/adapters/: NodeFileSystemAdapter.ts
src/config/: ClaudeDesktopConfigGenerator.ts  ConfigurationManager.ts  EnvGenerator.ts  PackageManagerDetector.ts  ProjectAnalyzer.ts  StandardMCPConfigGenerator.ts  UniversalMCPConfigGenerator.ts  index.ts  types.ts
src/interfaces/: FileSystemAdapter.ts  dependencies.ts
src/services/: AIAnalysisService.ts  BMADService.ts  DateTimeService.ts  DocumentLifecycleService.ts  DocumentTreeService.ts  DocumentationService.ts  FileBasedWorkDocumentConnectionService.ts  HooksService.ts  I18nService.ts  WorkDocumentConnectionService.ts  index.ts
src/tools/bmad/: index.ts
src/tools/documentation/: index.ts
src/tools/enhanced/: index.ts
src/tools/hooks/: index.ts
src/types/: bmad.types.ts  documentation.types.ts  enhanced.types.ts  hooks.types.ts  index.ts
src/utils/: ErrorRecoveryManager.ts  GracefulDegradation.ts  HealthMonitor.ts
